2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/Makefile.am:
	* flumotion/component/dvb/admin_gtk.py (DVBAdminGtkNode,
	  DVBAdminGtkNode.haveWidgetTree, DVBAdminGtkNode.setUIState,
	  DVBAdminGtkNode.stateSet, DVBAdminGtkNode.wave_changed_cb,
	  DVBAdminGtkNode.signalSet, DVBAdminGtkNode.snrSet,
	  DVBAdminGtkNode.berSet, DVBAdminGtkNode.uncSet, DVBAdminGtk,
	  DVBAdminGtk.setup):
	* flumotion/component/dvb/dvb.glade:
	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string, pmt_info_cb,
	  setVolume, getVolume):
	* flumotion/component/dvb/dvb.xml:
	Add admin ui for dvb.  Also audioconvert needed between audiorate
	and level because level doesn't handle 32 bit integers.

2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  configure_pipeline):
	Add volume effect to DVB.

2007-04-02  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/dvb.py (DVB, DVB.init,
	  _bus_message_received_cb):
	Add signal stats to uiState.	

2007-03-29  Zaheer Abbas Merali  <<zaheerabbas at merali dot org>>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string):
	Stupid flumotion complains if a feeder is not in the template,
	so if there is no video just tee the ts to the dummy video
	feeder.

2007-03-29  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  _bus_message_received_cb):
	* flumotion/component/dvb/dvb.xml:
	Add new options: has-video, video-decoder and audio-decoder.
	Make sure dvb stats are logged in debug level.
	Allow audio-only dvb.

2007-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* flumotion-dvb.spec.in:
	  fix buglets

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* configure.ac:
	  Back to dev.

=== release 0.3.1 ===

2007-02-08  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env
	* configure.ac: